# age

./: .gitmodules  CMakeLists.txt
demo/: CMakeLists.txt  main.cpp
demo/app/: Application.cpp  Application.h
demo/ecs/: ecsTest.cpp  ecsTest.h
demo/ogl_renderer/: oglRendererTest.cpp  oglRendererTest.h
demo/reflection/: reflectionTest.cpp  reflectionTest.h
include/: age.h
include/core/: Controls.h  IWindow.h
include/ecs/: Component.h  ComponentType.h  ComponentTypeStore.h  Ecs.h  EcsManager.h  Entity.h  System.h  SystemList.h
include/glfw/: GLFWindow.h
include/memory/: IMemoryManager.h  Memory.h
include/os/: Platform.h
include/os/timer/: Timer.h  TimerUnix.h  TimerWin.h
include/pattern/event/: BaseEvent.h  EventManager.h  IEvent.h  IEventManager.h  KeyEvent.h  MouseMoveEvent.h  MouseScrollEvent.h  WindowResizeEvent.h
include/pattern/message/: Message.h  MessageBus.h
include/pattern/message/SimpleExample/: Message.h  MessageBus.h
include/pattern/pubsub/: Channel.h  IPublisher.h  ISubscriber.h
include/reflection/: Reflection.h  TypeDesc.h  Var.h  VarBag.h
include/renderer/ogl_renderer/: GLMesh.h  GLRenderer.h  GLShader.h  GLUniform.h  GLUniformBuffer.h  GLUtilities.h
include/renderer/ogl_renderer/buffer/: GLIndexBuffer.h  GLVertexArray.h  GLVertexBuffer.h  GLVertexBufferLayoutImpl.h
include/renderer/renderer/: Camera.h  Mesh.h  RenderResource.h  Renderer.h  Shader.h  Uniform.h  UniformBuffer.h  UniformList.h
include/renderer/renderer/buffer/: IndexBuffer.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h
include/system/: ISystem.h
include/utilities/: GenericObjectFactory.h
lib/GLAD2/: CMakeLists.txt
lib/GLAD2/include/glad/: glad.h
lib/GLAD2/src/: glad.c
resources/shaders/glsl/: basic.glsl
src/: CMakeLists.txt  age.cpp
src/core/: CMakeLists.txt  IWindow.cpp
src/ecs/: CMakeLists.txt  ComponentTypeStore.cpp  EcsManager.cpp  System.cpp  SystemList.cpp
src/glfw/: CMakeLists.txt  GLFWindow.cpp
src/memory/: CMakeLists.txt  Memory.cpp
src/os/: CMakeLists.txt  Platform.cpp
src/os/timer/: CMakeLists.txt  Timer.cpp  TimerUnix.cpp  TimerWin.cpp
src/pattern/event/: CMakeLists.txt  EventManager.cpp  IEventManager.cpp
src/pattern/message/: MessageBus.cpp
src/pattern/message/SimpleExample/: CMakeLists.txt  MessageBus.cpp
src/pattern/pubsub/: CMakeLists.txt
src/reflection/: CMakeLists.txt  MemberDesc.cpp  MemberDesc.h  TypeDatabase.cpp  TypeDatabase.h  TypeDesc.cpp  VarBag.cpp
src/renderer/ogl_renderer/: CMakeLists.txt  GLMesh.cpp  GLRenderer.cpp  GLShader.cpp  GLUniform.cpp  GLUniformBuffer.cpp  GLUtilities.cpp
src/renderer/ogl_renderer/buffer/: GLIndexBuffer.cpp  GLVertexArray.cpp  GLVertexBuffer.cpp  GLVertexBufferLayoutImpl.cpp
src/renderer/renderer/: CMakeLists.txt  Camera.cpp
